[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kuberhealthy-client"
version = "0.1.0"
description = "Python client for reporting check results to Kuberhealthy"
readme = "README.md"
authors = [{name = "Kuberhealthy"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["kuberhealthy_client"]
